--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@ body > * {
     justify-content: center;
     align-items: center;
     opacity: 0.8;
+    font-size: 1.3rem;
     border: 1px solid var(--border-color);
 }
 
